<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Román Ginés Martínez Ferrández <rgmf@riseup.net>
 *
 * This program (LibreSportGPS) is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General 
 * Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<resources>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Tracks</item>
        <item >Activity View</item>
        <item>Stats</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_storage</item>
        <item>@drawable/ic_action_play</item>
        <item>@drawable/ic_stats</item>
    </array>

    <!-- Error messages. -->
    <string name="db_error_to_create_track">The track cannot be created in the database.</string>
    <string name="track_was_not_deleted">The track was not deleted.</string>

    <!-- Preferences strings -->
    <string name="time_before_logging_title">Time between registers</string>
    <string name="time_before_logging_summary">Use 0 to maximum frequency. The best option is reduce the time between each register to save battery.</string>
    <string name="time_before_logging_dialog_title">Seconds time</string>
    <string name="time_before_logging_hint">Seconds</string>

    <!-- Hints -->
    <string name="add_segment_hint">To add a segment you have to click on two points on track you can see on the map: begin and end segmento points. Then you can click on add segmento button.</string>
    <string name="required_value">Required value</string>
    <string name="segment_created">Segment created</string>
    <string name="fail_segment_created">Fail segment creation</string>
    <string name="app_name">LibreSportGPS</string>
    <string name="display_track">Display Track</string>
    <string name="gps_disabled">GPS disabled.</string>
    <string name="gps_disabled_hint">GPS is disabled. Do you want to enable it?</string>
    <string name="waiting_gps">Waiting for a better GPS signal... Please try later.</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="current_speed_hint">Current Speed</string>
    <string name="average_speed_hint">Average Speed</string>
    <string name="max_speed_hint">Max. Speed</string>
    <string name="distance_hint">Distance</string>
    <string name="distance_unit">km</string>
    <string name="speed_unit">km/h</string>
    <string name="start_time_hint">Start Time</string>
    <string name="activity_time_hint">Activity Time</string>
    <string name="title_activity_display_track">DisplayTrack</string>
    <string name="title_start_section">Tracks</string>
    <string name="title_data_section">Data View</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_display_track">Ver Track</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="stop_activity">Stop Activity</string>
    <string name="stop_activity_question">Do you really like to end the activity? This action cannot be undo.</string>
    <string name="external_storage_not_available">The external storage is not available... The track won\'t be saved.</string>
    <string name="activity_not_started">The activity has not started.</string>
    <string name="out_of_service">Out of service. The tracking is stopped.</string>
    <string name="service_again_available">The service is again available. The tracking continue.</string>
    <string name="delete_trackfile">Delete Track</string>
    <string name="delete_trackfile_hint">Do you really like to delete the track? This action cannot be undo.</string>
    <string name="delete_tracksfile_selected_hint">Do you really like to delete all the tracks selected? This action cannot be undo.</string>
    <string name="activity_finished">Activity finished</string>
    <string name="loading_data">Loading data...</string>
    <string name="loading_file">Loading file... Be patient, this can take too time...</string>
    <string name="track_date_hint">Date</string>
    <string name="track_distance_hint">Distance</string>
    <string name="track_activity_time_hint">Activity Time</string>
    <string name="track_elevation_hint">Elevation</string>
    <string name="track_max_ele_hint">Max.</string>
    <string name="track_min_ele_hint">Min.</string>
    <string name="track_gain_ele_hint">Gain</string>
    <string name="track_loss_ele_hint">Loss</string>
    <string name="track_speed_hint">Speed</string>
    <string name="track_max_speed_hint">Max.</string>
    <string name="track_avg_speed_hint">Avg.</string>
    <string name="button_delete">Delete</string>
    <string name="gps_accuracy_hint">Accuracy</string>
    <string name="gps_status_hint">GPS Status</string>
    <string name="accuracy_unit">m</string>
    <string name="track_name_hint">Name</string>
    <string name="track_description_hint">Description</string>
    <string name="logo_content_description">Sport Logo</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="unknown_sport">Unknown Sport</string>
    <string name="import_file">Import</string>
    <string name="elevation">Elevation</string>
    <string name="distance">Distance</string>
    <string name="route_profile">Profile</string>
    <string name="track_on_map">Track on map</string>
    <string name="gps_update">GPS improvement</string>
    <string name="no_tracks_to_display">No tracks to display</string>
    <string name="detail">Detail</string>
    <string name="altimetry">Altimetry</string>
    <string name="segment">Segment</string>
    <string name="add_segment">Add Segment</string>
    <string name="name">Name</string>
    <string name="title_activity_segment">SegmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="training_time">This training time</string>
    <string name="stats_summary">Stats Summary</string>
    <string name="total_distance">Total Distance</string>
    <string name="max_distance">Max. Distance</string>
    <string name="total_gain">Total Elevation Gain</string>
    <string name="max_gain">Max. Elevation Gain</string>
    <string name="total_time">Total Time</string>
    <string name="max_time">Max. Time</string>

</resources>
