<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Román Ginés Martínez Ferrández <rgmf@riseup.net>
 *
 * This program (LibreSportGPS) is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General 
 * Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed" >
    
    <EditText
        android:id="@+id/track_edit_name"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapSentences"
	    android:imeOptions="actionSend"
	    android:textColor="#454545"
	    android:textSize="22sp"
	    android:hint="@string/track_name_hint" />
    
    <EditText
        android:id="@+id/track_edit_description"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@id/track_edit_name"
        android:inputType="textCapSentences"
        android:lines="4"
        android:minLines="4"
        android:scrollbars="horizontal|vertical"
	    android:imeOptions="actionSend"
        android:textColor="#454545"
        android:textSize="18sp"
        android:hint="@string/track_description_hint" />
    
    <LinearLayout
        android:id="@+id/track_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_edit_description"
	    android:orientation="horizontal" >
        <TextView
	        android:id="@+id/track_date_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
        	android:text="@string/track_date_hint"
        	android:paddingRight="10dp"
        	android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_date"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
        	android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_distance"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_date" >
        <TextView
	        android:id="@+id/track_distance_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_distance_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_distance"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_activity_time"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_distance" >
        <TextView
	        android:id="@+id/track_activity_time_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_activity_time_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_activity_time"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_max_ele"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_activity_time">
	    <TextView
	        android:id="@+id/track_max_ele_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_max_ele_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_max_ele"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_min_ele"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_max_ele" >
	    <TextView
	        android:id="@+id/track_min_ele_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_min_ele_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_min_ele"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_gain_ele"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_min_ele" >
	    <TextView
	        android:id="@+id/track_gain_ele_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_gain_ele_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_gain_ele"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_loss_ele"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_gain_ele" >
	    <TextView
	        android:id="@+id/track_loss_ele_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_loss_ele_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_loss_ele"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_max_speed"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_loss_ele" >
	    <TextView
	        android:id="@+id/track_max_speed_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_max_speed_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_max_speed"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/track_detail_avg_speed"
	    android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/track_detail_max_speed" >
	    <TextView
	        android:id="@+id/track_avg_speed_hint"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:text="@string/track_avg_speed_hint"
	        android:textColor="#454545"
        	android:paddingRight="10dp"
	        android:textSize="18sp" />
	    <TextView
	        android:id="@+id/track_avg_speed"
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"
	        android:textColor="#454545"
	        android:textSize="18sp" />
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/track_detail_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:style/ButtonBar"
        android:layout_alignParentBottom="true">
	    <Button
	        android:id="@+id/track_del_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_delete" />
	</LinearLayout>

</RelativeLayout>