<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Román Ginés Martínez Ferrández <rgmf@riseup.net>
 *
 * This program (LibreSportGPS) is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General 
 * Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->

<ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools" >
<GridLayout 
    android:id="@+id/libresportgps_root_view"
    tools:context="es.rgmf.libresportgps.LibreSportGps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:columnCount="2"
    android:rowCount="14" >
    
    <!-- Current Speed -->

    <TextView
        android:id="@+id/current_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/current_speed_hint"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_row="1"
        android:layout_rowSpan="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <TextView
	        android:id="@+id/current_speed"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="-"
	        android:textSize="80sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/current_speed_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10sp"
	        android:text="@string/speed_unit"
	        android:textSize="15sp" />
    </LinearLayout>
    
    
    <!-- Average Speed -->

    <TextView
        android:id="@+id/average_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:text="@string/average_speed_hint"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/average_speed"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="-"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <!-- Max. Speed -->

    <TextView
        android:id="@+id/max_speed_text"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:text="@string/max_speed_hint"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/max_speed"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:text="-"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <!-- Horizontal line -->
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/accent_color" />
    
    <!-- Distance -->

    <TextView
        android:id="@+id/distance_text"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_gravity="center"
        android:text="@string/distance_hint"
        android:textSize="20sp" />

	<LinearLayout 
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_row="6"
        android:layout_rowSpan="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >    
	    <TextView
	        android:id="@+id/distance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="-"
	        android:textSize="40sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/distance_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10sp"
	        android:text="@string/distance_unit"
	        android:textSize="15sp" />
	</LinearLayout>
    
    <!-- Start Time -->

    <TextView
        android:id="@+id/start_time_text"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_gravity="center"
        android:text="@string/start_time_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/start_time"
        android:layout_column="1"
        android:layout_row="6"
        android:layout_gravity="center"
        android:text="--:--:--.--"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <!-- Activity Time -->

    <TextView
        android:id="@+id/activity_time_text"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_gravity="center"
        android:text="@string/activity_time_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/activity_time"
        android:layout_column="1"
        android:layout_row="8"
        android:layout_gravity="center"
        android:text="--:--:--.--"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <!-- Horizontal line -->
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="9"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/accent_color" />
    
    <!-- GPS Information -->
    
    <TextView
        android:id="@+id/gps_accuracy_text"
        android:layout_column="0"
        android:layout_row="10"
        android:layout_gravity="center"
        android:text="@string/gps_accuracy_hint"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="11"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/gps_accuracy"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="-"
	        android:textSize="20sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/accuracy_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10sp"
	        android:text="@string/accuracy_unit"
	        android:textSize="15sp" />
	</LinearLayout>
    
    <TextView
        android:id="@+id/gps_status_text"
        android:layout_column="1"
        android:layout_row="10"
        android:layout_gravity="center"
        android:text="@string/gps_status_hint"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gps_status"
        android:layout_column="1"
        android:layout_row="11"
        android:layout_gravity="center"
        android:text="-"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <!-- Horizontal line -->
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="12"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/accent_color" />
    
    <!-- Start, pause and stop -->
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="13"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_columnSpan="2" >

        <!-- TODO: Only one of the following views should be displayed -->
        <ImageView
            android:id="@+id/ic_play_pause"
            android:layout_margin="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_play"
            />

        <ImageView
            android:id="@+id/ic_stop"
            android:layout_margin="10dp"
            android:layout_height="80dp"
            android:layout_width="80dp"
            android:layout_gravity="center"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_stop"
              />
      </LinearLayout>
</GridLayout>
</ScrollView>
