<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2014 Román Ginés Martínez Ferrández <rgmf@riseup.net>
 *
 * This program (LibreSportGPS) is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General 
 * Public License as published by the Free Software Foundation, either
 * version 3 of the License, or any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/sport_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/sport_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/sport_logo"
        android:text="-"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/workouts_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:text="-"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/distance_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sport_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_distance"
        android:textColor="#454545"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sport_logo"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="- km"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/max_distance_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/max_distance"
        android:textColor="#454545"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/max_distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/distance_value"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="- km"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/gain_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_distance_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_gain"
        android:textColor="#454545"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/max_distance_value"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="- m"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/max_gain_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gain_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/max_gain"
        android:textColor="#454545"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/max_gain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/gain_value"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="- m"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/time_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_gain_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_time"
        android:textColor="#454545"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/max_gain_value"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="--:--:--"
        android:textColor="#454545" />

    <TextView
        android:id="@+id/max_time_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/max_time"
        android:textColor="#454545"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/max_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/time_value"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="--:--:--"
        android:textColor="#454545" />

</RelativeLayout>